--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Mazzard+H:wght@400&display=swap");
 
 @tailwind base;
@@ -29,7 +34,7 @@
 
 /*  */
 body {
-  font-family: 'Mazzard H', sans-serif;
+  font-family: syne;
 }
 .black-background {
     background-color: rgb(31, 33, 34);
