--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,15 @@
 body {
   font-family: syne;
 }
+
+.roundHover{
+  transform: translate(-50%,-50%);
+
+}
+
+.roundHover:hover{
+  height: 100%;
+}
 .black-background {
     background-color: rgb(31, 33, 34);
     color: rgb(255, 254, 253);
